Split up how we do inline blocks so they make more sense now that we are doing a more intelligent combination.

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -370,6 +370,9 @@
     <Compile Include="Statements\StatementFilterTest.TestEquiv.g.cs">
       <DependentUpon>StatementFilterTest.cs</DependentUpon>
     </Compile>
+    <Compile Include="Statements\StatementFilterTest.TestRename.g.cs">
+      <DependentUpon>StatementFilterTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Statements\StatementFilterTest.TestTryCombine.g.cs">
       <DependentUpon>StatementFilterTest.cs</DependentUpon>
     </Compile>
