--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -118,6 +118,7 @@
     <Compile Include="ResultOperators\ROSum.cs" />
     <Compile Include="ResultOperators\ROTakeSkipOperators.cs" />
     <Compile Include="ResultOperators\ROUniqueCombinations.cs" />
+    <Compile Include="Statements\StatemenRecordValue.cs" />
     <Compile Include="Statements\StatementTestLoopPairwise.cs" />
     <Compile Include="Statements\StatementCheckLoopPairwise.cs" />
     <Compile Include="Statements\StatementLoopOverGood.cs" />
