Get try combine working for integers.

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -399,6 +399,9 @@
     <Compile Include="Statements\StatementIncrementIntegerTest.TestRename.g.cs">
       <DependentUpon>StatementIncrementIntegerTest.cs</DependentUpon>
     </Compile>
+    <Compile Include="Statements\StatementIncrementIntegerTest.TestTryCombine.g.cs">
+      <DependentUpon>StatementIncrementIntegerTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Statements\StatementInlineBlockTest.Add.g.cs">
       <DependentUpon>StatementInlineBlockTest.cs</DependentUpon>
     </Compile>
