--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -354,12 +354,28 @@
     <Compile Include="ResultOperators\ROCountTest.ProcessResultOperator.g.cs">
       <DependentUpon>ROCountTest.cs</DependentUpon>
     </Compile>
+    <Compile Include="Statements\StatementAggregateTest.CodeItUpTest.g.cs">
+      <DependentUpon>StatementAggregateTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Statements\StatementAggregateTest.cs" />
     <Compile Include="Statements\IStatementCombineTest.cs" />
     <Compile Include="Statements\IStatementCombineTest.TestEquiv.g.cs">
       <DependentUpon>IStatementCombineTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Statements\IStatementCombineTest.TestRename.g.cs">
       <DependentUpon>IStatementCombineTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Statements\StatementAggregateTest.IsSameStatementTest.g.cs">
+      <DependentUpon>StatementAggregateTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Statements\StatementAggregateTest.RenameVariableTest.g.cs">
+      <DependentUpon>StatementAggregateTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Statements\StatementAggregateTest.StatementAggregateConstructorTest.g.cs">
+      <DependentUpon>StatementAggregateTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Statements\StatementAggregateTest.TryCombineStatementTest.g.cs">
+      <DependentUpon>StatementAggregateTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Statements\StatementAssignTest.CodeItUpTest.g.cs">
       <DependentUpon>t_StatementAssign.cs</DependentUpon>
