--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Factories\NTObjectFactory.cs" />
     <Compile Include="Factories\SkipResultOperatorFactory.cs" />
     <Compile Include="Factories\StatementAssignFactory.cs" />
+    <Compile Include="Factories\StatementCheckLoopPairwiseFactory.cs" />
     <Compile Include="Factories\StatementFilterFactory.cs" />
     <Compile Include="Factories\StatementFlipBoolFactory.cs" />
     <Compile Include="Factories\StatementIfOnCountFactory.cs" />
@@ -490,6 +491,9 @@
     </Compile>
     <Compile Include="Statements\StatementSimpleStatementTest.cs" />
     <Compile Include="Statements\StatementVectorLoopTest.cs" />
+    <Compile Include="Statements\TestStatementCheckLoopPairwise.TestStatementCheckLoopPairwiseConstructor.g.cs">
+      <DependentUpon>StatementCheckLoopPairwiseTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Statements\Utils.cs" />
     <Compile Include="TestQueriesGreaterLevels.cs" />
     <Compile Include="TestQueriesTopLevel.cs" />
@@ -553,6 +557,7 @@
     <Compile Include="ResultOperators\t_ROPairWiseAll.cs" />
     <Compile Include="Statements\t_StatementRecordIndicies.cs" />
     <Compile Include="Statements\t_StatementAssign.cs" />
+    <Compile Include="Statements\StatementCheckLoopPairwiseTest.cs" />
     <Compile Include="Utils\ExpressionUtilitiesTest.TestApply.g.cs">
       <DependentUpon>t_ExpressionUtilities.cs</DependentUpon>
     </Compile>
