--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -113,6 +113,7 @@
     <Compile Include="ResultOperators\ROPairWiseAll.cs" />
     <Compile Include="ResultOperators\ROTakeSkipOperators.cs" />
     <Compile Include="ResultOperators\ROUniqueCombinations.cs" />
+    <Compile Include="Statements\StatementAnyAllDetector.cs" />
     <Compile Include="Statements\StatementAggregate.cs" />
     <Compile Include="Statements\StatementInlineBlockBase.cs" />
     <Compile Include="Statements\StatementTestLoopPairwise.cs" />
