--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Factories\StatementMinMaxTestFactory.cs" />
     <Compile Include="Factories\StatementPairLoopFactory.cs" />
     <Compile Include="Factories\StatementRecordIndiciesFactory.cs" />
+    <Compile Include="Factories\StatementRecordValueFactory.cs" />
     <Compile Include="Factories\StatementSimpleStatementFactory.cs" />
     <Compile Include="Factories\TakeResultOperatorFactory.cs" />
     <Compile Include="Factories\TypeHandlerReplacementCallFactory.cs" />
@@ -382,19 +383,19 @@
       <DependentUpon>StatementAggregateTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Statements\StatementAssignTest.CodeItUpTest.g.cs">
-      <DependentUpon>t_StatementAssign.cs</DependentUpon>
+      <DependentUpon>StatementAssignTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Statements\StatementAssignTest.IsSameStatementTest.g.cs">
-      <DependentUpon>t_StatementAssign.cs</DependentUpon>
+      <DependentUpon>StatementAssignTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Statements\StatementAssignTest.RenameVariableTest.g.cs">
-      <DependentUpon>t_StatementAssign.cs</DependentUpon>
+      <DependentUpon>StatementAssignTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Statements\StatementAssignTest.StatementAssignConstructorTest.g.cs">
-      <DependentUpon>t_StatementAssign.cs</DependentUpon>
+      <DependentUpon>StatementAssignTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Statements\StatementAssignTest.TryCombineStatementTest.g.cs">
-      <DependentUpon>t_StatementAssign.cs</DependentUpon>
+      <DependentUpon>StatementAssignTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Statements\StatementFilterTest.CodeItUp.g.cs">
       <DependentUpon>StatementFilterTest.cs</DependentUpon>
@@ -472,19 +473,19 @@
       <DependentUpon>StatementPairLoopTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Statements\StatementRecordIndiciesTest.CodeItUpTest.g.cs">
-      <DependentUpon>t_StatementRecordIndicies.cs</DependentUpon>
+      <DependentUpon>StatementRecordIndiciesTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Statements\StatementRecordIndiciesTest.IsSameStatementTest.g.cs">
-      <DependentUpon>t_StatementRecordIndicies.cs</DependentUpon>
+      <DependentUpon>StatementRecordIndiciesTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Statements\StatementRecordIndiciesTest.RenameVariableTest.g.cs">
-      <DependentUpon>t_StatementRecordIndicies.cs</DependentUpon>
+      <DependentUpon>StatementRecordIndiciesTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Statements\StatementRecordIndiciesTest.StatementRecordIndiciesConstructorTest.g.cs">
-      <DependentUpon>t_StatementRecordIndicies.cs</DependentUpon>
+      <DependentUpon>StatementRecordIndiciesTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Statements\StatementRecordIndiciesTest.TryCombineStatementTest.g.cs">
-      <DependentUpon>t_StatementRecordIndicies.cs</DependentUpon>
+      <DependentUpon>StatementRecordIndiciesTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Statements\StatementSimpleStatementTest.CodeItUp.g.cs">
       <DependentUpon>StatementSimpleStatementTest.cs</DependentUpon>
@@ -494,6 +495,15 @@
     </Compile>
     <Compile Include="Statements\StatementSimpleStatementTest.cs" />
     <Compile Include="Statements\StatementVectorLoopTest.cs" />
+    <Compile Include="Statements\TestStatemenRecordValue.TestCodeItUp.g.cs">
+      <DependentUpon>StatemenRecordValueTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Statements\TestStatemenRecordValue.TestRenameVariable.g.cs">
+      <DependentUpon>StatemenRecordValueTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Statements\TestStatemenRecordValue.TestTryCombineStatement.g.cs">
+      <DependentUpon>StatemenRecordValueTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Statements\TestStatementAnyAllDetector.TestCodeItUp.g.cs">
       <DependentUpon>StatementAnyAllDetectorTest.cs</DependentUpon>
     </Compile>
@@ -567,10 +577,11 @@
       <DependentUpon>TypeHandlerCacheTest.cs</DependentUpon>
     </Compile>
     <Compile Include="ResultOperators\t_ROPairWiseAll.cs" />
-    <Compile Include="Statements\t_StatementRecordIndicies.cs" />
-    <Compile Include="Statements\t_StatementAssign.cs" />
+    <Compile Include="Statements\StatementRecordIndiciesTest.cs" />
+    <Compile Include="Statements\StatementAssignTest.cs" />
     <Compile Include="Statements\StatementCheckLoopPairwiseTest.cs" />
     <Compile Include="Statements\StatementAnyAllDetectorTest.cs" />
+    <Compile Include="Statements\StatemenRecordValueTest.cs" />
     <Compile Include="Utils\ExpressionUtilitiesTest.TestApply.g.cs">
       <DependentUpon>t_ExpressionUtilities.cs</DependentUpon>
     </Compile>
