--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -118,6 +118,7 @@
     <Compile Include="ResultOperators\ROSum.cs" />
     <Compile Include="ResultOperators\ROTakeSkipOperators.cs" />
     <Compile Include="ResultOperators\ROUniqueCombinations.cs" />
+    <Compile Include="Statements\StatementRecordValue.cs" />
     <Compile Include="Statements\StatementAnyAllDetector.cs" />
     <Compile Include="Statements\StatementAggregate.cs" />
     <Compile Include="Statements\StatementInlineBlockBase.cs" />
