--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -87,6 +87,10 @@
     <Compile Include="CodeContext.cs" />
     <Compile Include="CombinedGeneratedCode.cs" />
     <Compile Include="CPPTranslator.cs" />
+    <Compile Include="ExecutionCommon\ExecutionEnvironment.cs" />
+    <Compile Include="ExecutionCommon\ExecutionUtilities.cs" />
+    <Compile Include="ExecutionCommon\IQueryExectuor.cs" />
+    <Compile Include="ExecutionCommon\LocalExecutor.cs" />
     <Compile Include="Expressions\ArrayExpressionParser.cs" />
     <Compile Include="Expressions\ArrayInfoVector.cs" />
     <Compile Include="Expressions\ExpressionStringConverter.cs" />
