--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -90,7 +90,11 @@
     <Compile Include="ExecutionCommon\ExecutionEnvironment.cs" />
     <Compile Include="ExecutionCommon\ExecutionUtilities.cs" />
     <Compile Include="ExecutionCommon\IQueryExectuor.cs" />
+    <Compile Include="ExecutionCommon\LocalBuildBase.cs" />
     <Compile Include="ExecutionCommon\LocalExecutor.cs" />
+    <Compile Include="ExecutionCommon\ParallelExes\ParallelOnLocalMachineExecutor.cs" />
+    <Compile Include="ExecutionCommon\ParallelExes\SubProcessRunInfo.cs" />
+    <Compile Include="ExecutionCommon\ParallelExes\SubProcessRunner.cs" />
     <Compile Include="Expressions\ArrayExpressionParser.cs" />
     <Compile Include="Expressions\ArrayInfoVector.cs" />
     <Compile Include="Expressions\ExpressionStringConverter.cs" />
