--- a/LINQToTTree/LINQToTTreeLib/packages.config
+++ b/LINQToTTree/LINQToTTreeLib/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NVelocity" version="1.0.3" />
+  <package id="ROOTNET-Core-v5.30.01.win32.vc10" version="2.2" />
+  <package id="ROOTNET-Tree-v5.30.01.win32.vc10" version="2.2" />
 </packages>
