--- a/LINQToTTreeHelpers/LINQToTreeHelpers/LINQToTreeHelpers.csproj
+++ b/LINQToTTreeHelpers/LINQToTreeHelpers/LINQToTreeHelpers.csproj
@@ -38,26 +38,46 @@
       <HintPath>..\Libraries\Doddle.Reporting.dll</HintPath>
     </Reference>
     <Reference Include="libCoreWrapper">
-      <HintPath>..\..\..\..\..\..\..\..\root\NETWrappers\lib\libCoreWrapper.dll</HintPath>
+      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libCoreWrapper.dll</HintPath>
     </Reference>
     <Reference Include="libGpadWrapper">
-      <HintPath>..\..\..\..\..\..\..\root\NETWrappers\lib\libGpadWrapper.dll</HintPath>
+      <HintPath>..\packages\ROOTNET-Graphing-v5.30.01.win32.vc10.2.2\lib\net40\libGpadWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libGrafWrapper, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\..\..\..\..\..\..\root\NETWrappers\lib\libGrafWrapper.dll</HintPath>
+    <Reference Include="libGraf3dWrapper">
+      <HintPath>..\packages\ROOTNET-Graphing-v5.30.01.win32.vc10.2.2\lib\net40\libGraf3dWrapper.dll</HintPath>
+    </Reference>
+    <Reference Include="libGrafWrapper">
+      <HintPath>..\packages\ROOTNET-Graphing-v5.30.01.win32.vc10.2.2\lib\net40\libGrafWrapper.dll</HintPath>
     </Reference>
     <Reference Include="libHistWrapper">
-      <HintPath>..\..\..\..\..\..\..\root\NETWrappers\lib\libHistWrapper.dll</HintPath>
+      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libHistWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libPhysicsWrapper, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86" />
+    <Reference Include="libMathCoreWrapper">
+      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libMathCoreWrapper.dll</HintPath>
+    </Reference>
+    <Reference Include="libNetWrapper">
+      <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.2\lib\net40\libNetWrapper.dll</HintPath>
+    </Reference>
+    <Reference Include="libPhysicsWrapper">
+      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libPhysicsWrapper.dll</HintPath>
+    </Reference>
     <Reference Include="libRIOWrapper">
-      <HintPath>..\..\..\..\..\..\..\..\root\NETWrappers\lib\libRIOWrapper.dll</HintPath>
+      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libRIOWrapper.dll</HintPath>
+    </Reference>
+    <Reference Include="libThreadWrapper">
+      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libThreadWrapper.dll</HintPath>
+    </Reference>
+    <Reference Include="libTreePlayerWrapper">
+      <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.2\lib\net40\libTreePlayerWrapper.dll</HintPath>
+    </Reference>
+    <Reference Include="libTreeWrapper">
+      <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.2\lib\net40\libTreeWrapper.dll</HintPath>
     </Reference>
     <Reference Include="LinqToTTreeInterfacesLib">
-      <HintPath>..\..\..\..\..\..\..\..\root\NETWrappers\LINQ\lib\LinqToTTreeInterfacesLib.dll</HintPath>
+      <HintPath>..\..\LINQToTTree\LINQToTTreeLib\bin\Debug\LinqToTTreeInterfacesLib.dll</HintPath>
     </Reference>
     <Reference Include="LINQToTTreeLib">
-      <HintPath>..\..\..\..\..\..\..\..\root\NETWrappers\LINQ\lib\LINQToTTreeLib.dll</HintPath>
+      <HintPath>..\..\LINQToTTree\LINQToTTreeLib\bin\Debug\LINQToTTreeLib.dll</HintPath>
     </Reference>
     <Reference Include="Sprache">
       <HintPath>..\packages\Sprache.1.9.1.31\lib\NET40\Sprache.dll</HintPath>
@@ -70,7 +90,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="WrapperPlumbingLibrary">
-      <HintPath>..\..\..\..\..\..\..\..\root\NETWrappers\lib\WrapperPlumbingLibrary.dll</HintPath>
+      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\WrapperPlumbingLibrary.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
