More scripts that should allow us to properly deal with this thing.

--- a/LINQToTTree/MSBuildTasks/MSBuildTasks.csproj
+++ b/LINQToTTree/MSBuildTasks/MSBuildTasks.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <None Include="LINQTargets.targets">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
